recursion.lessons.recursion.polygonfractal.PolygonFractal.scala.error
PolygonFractal:8: error: ';' expected but ')' found.
			gauche((sides - 2) * 360/2*sides ))
                                                          ^